objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Concerns_or_Risks__c</fullName>
        <label>Concerns or Risks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>HYPERLINK( "/" &amp; Sales_Order__r.Account.Id ,  Sales_Order__r.Account.Name )</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_from_Opportunity__c</fullName>
        <description>Sales_Order__r.Professional_Services_Contact__r.FirstName &amp; " " &amp;  Sales_Order__r.Professional_Services_Contact__r.LastName</description>
        <formula>"Recreate this formula field per Help Bubble"</formula>
        <inlineHelpText>Project Manager from the associated Sales Order, if any. Original IMX test formula: Sales_Order__r.Professional_Services_Contact__r.FirstName &amp; " " &amp;  Sales_Order__r.Professional_Services_Contact__r.LastName</inlineHelpText>
        <label>PM from Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proj_ID__c</fullName>
        <displayFormat>PR-{MM}{YY}-{00}</displayFormat>
        <externalId>true</externalId>
        <label>Proj ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Health__c</fullName>
        <label>Project Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Healthy</fullName>
                    <default>true</default>
                    <label>A - Healthy</label>
                </value>
                <value>
                    <fullName>B - Some Issues</fullName>
                </value>
                <value>
                    <fullName>C - At Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Legacy_ID__c</fullName>
        <label>Project Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <label>Project Notes</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <inlineHelpText>Current stage of project - to be updated by project manager</inlineHelpText>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Kickoff</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Parked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>Additional Work</fullName>
                </value>
                <value>
                    <fullName>Board Building Hours</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Modules Only</fullName>
                </value>
                <value>
                    <fullName>New Implementation</fullName>
                </value>
                <value>
                    <fullName>Service Credit Plan</fullName>
                </value>
                <value>
                    <fullName>Staffing</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_ID__c</fullName>
        <description>BLANKVALUE(Sales_Order__r.Proposal_ID__c
, Sales_Order__r.Compiere_Order_Quote__c )</description>
        <formula>"Recreate this formula field per Help Bubble"</formula>
        <inlineHelpText>Proposal ID from Sales Order.  If blank, displays the Compiere Order/Quote # instead. Original IMX test formual: BLANKVALUE(Sales_Order__r.Proposal_ID__c
, Sales_Order__r.Compiere_Order_Quote__c )</inlineHelpText>
        <label>Proposal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Master Project</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Proposal_ID__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Project_Stage__c</columns>
        <columns>Project_Health__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>All_New_Projects</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Proposal_ID__c</columns>
        <columns>PM_from_Opportunity__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Project_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All New Projects</label>
    </listViews>
    <listViews>
        <fullName>Linda_s_Projects</fullName>
        <columns>Proposal_ID__c</columns>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Project_Stage__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Sales_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Smith-Jones</value>
        </filters>
        <label>Linda's Projects</label>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Proposal_ID__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Project_End_Date__c</columns>
        <columns>Project_Stage__c</columns>
        <columns>Project_Health__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>notEqual</operation>
            <value>Completed,On Hold,Parked,Cancelled</value>
        </filters>
        <label>Open Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>